--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -212,13 +212,13 @@ jobs:
           cat > packaging/postinst <<'EOF'
           #!/bin/sh
           set -e
-          ln -sf /opt/"${APP_NAME}"/bin/"${APP_NAME}" /usr/local/bin/"${APP_NAME}"
+          ln -sf /opt/"${{ env.APP_NAME }}"/bin/"${{ env.APP_NAME }}" /usr/local/bin/"${{ env.APP_NAME }}"
           exit 0
           EOF
           cat > packaging/postrm <<'EOF'
           #!/bin/sh
           set -e
-          rm -f /usr/local/bin/"${APP_NAME}"
+          rm -f /usr/local/bin/"${{ env.APP_NAME }}"
           exit 0
           EOF
           chmod 755 packaging/postinst packaging/postrm
@@ -389,17 +389,13 @@ jobs:
     steps:
       - uses: actions/download-artifact@v4
         with:
-          name: ${{ env.APP_NAME }}-${{ env.VERSION }}-portable.zip
+          name: ${{ env.APP_NAME }}-${{ env.VERSION }}.exe
           path: artifacts
       - name: Run portable EXE (no install)
         shell: powershell
         run: |
-          $zip = Get-ChildItem artifacts -Filter *-portable.zip | Select-Object -First 1
-          if(-not $zip){ throw "Portable ZIP not found" }
-          Expand-Archive -Path $zip.FullName -DestinationPath "$PWD\app" -Force
-          $cli = Get-ChildItem -Path "$PWD\app" -Recurse -Filter "${env:APP_NAME}.exe" | Select-Object -First 1
-          if(-not $cli){ throw "Portable EXE not found" }
-          & $cli.FullName --help
+          $exe = Get-ChildItem -Path artifacts -Filter *.exe | Select-Object -First 1
+          & $exe.FullName --help
 
   Create-cli-Release:
     runs-on: ubuntu-latest
