--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -204,23 +204,45 @@ jobs:
         with:
           name: "${{ env.APP_NAME }}-${{ env.VERSION }}.jar"
           path: target
-      - name: jpackage -> .deb (CLI only)
+      - name: Write Debian maintainer scripts (CLI; no xdg)
+        shell: bash
+        run: |
+          set -euo pipefail
+          mkdir -p packaging/DEBIAN
+          cat > packaging/DEBIAN/postinst <<'EOF'
+          #!/bin/sh
+          set -e
+          ln -sf /opt/${APP_NAME}/bin/${APP_NAME} /usr/local/bin/${APP_NAME} || true
+          exit 0
+          EOF
+          cat > packaging/DEBIAN/postrm <<'EOF'
+          #!/bin/sh
+          set -e
+          rm -f /usr/local/bin/${APP_NAME} || true
+          exit 0
+          EOF
+          chmod 755 packaging/DEBIAN/postinst packaging/DEBIAN/postrm
+
+      - name: jpackage -> .deb (CLI only, no desktop)
         shell: bash
         run: |
           set -euo pipefail
           mkdir -p dist
           jpackage \
-          --type deb \
-          --name "${{ env.APP_NAME }}" \
-          --linux-package-name "${{ env.APP_NAME }}" \
-          --input target \
-          --main-jar "${{ needs.build-jar.outputs.cli_jar_name }}" \
-          --main-class "${{ env.MAIN_CLASS }}" \
-          --app-version "${{ env.VERSION }}" \
-          --linux-deb-maintainer "Expresso Team <antony-08@hotmail.com>" \
-          --icon assets/icon.png \
-          --dest dist \
-          --verbose
+            --type deb \
+            --name "${{ env.APP_NAME }}" \
+            --linux-package-name "${{ env.APP_NAME }}" \
+            --input target \
+            --main-jar "${{ needs.build-jar.outputs.cli_jar_name }}" \
+            --main-class "${{ env.MAIN_CLASS }}" \
+            --app-version "${{ env.VERSION }}" \
+            --linux-deb-maintainer "Expresso Team <antony-08@hotmail.com>" \
+            --dest dist \
+            --verbose \
+            --resource-dir packaging \
+            --linux-shortcut false
+          # (Optional) omit --icon for pure-CLI; if you keep it, it’s fine because we override scripts.
+
       - name: Upload .deb artifact
         uses: actions/upload-artifact@v4
         with:
@@ -314,17 +336,11 @@ jobs:
           if(-not $msi){ throw "MSI not found" }
           Write-Host "Installing $($msi.FullName)"
           Start-Process -FilePath msiexec.exe -ArgumentList '/i', $msi.FullName, '/qn', '/norestart' -Wait -NoNewWindow
-          $installDir = "C:\Program Files\${env:APP_NAME}"
-          $candidatePaths = @(
-            Join-Path $installDir "${env:APP_NAME}.exe",
-            Join-Path $installDir "bin\${env:APP_NAME}.exe"
-          )
-          $cliPath = $candidatePaths | Where-Object { Test-Path $_ } | Select-Object -First 1
-          if(-not $cliPath){
-            $checked = $candidatePaths -join ', '
-            throw "CLI executable not found. Checked: $checked"
+          $cliPath = "C:\Program Files\${env:APP_NAME}\${env:APP_NAME}.exe"
+          if(-not (Test-Path $cliPath)){
+            throw "CLI executable not found at $cliPath"
           }
-          & $cliPath --help
+          & $cliPath --version
           Start-Process -FilePath msiexec.exe -ArgumentList '/x', $msi.FullName, '/qn', '/norestart' -Wait -NoNewWindow
 
   cli-portable-exe:
