--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -5,7 +5,7 @@ on:
     branches: [main]
 
 env:
-  APP_NAME: expresso
+  APP_NAME: expressor
   MAIN_CLASS: com.diezam04.expresso.adapters.cli.Cli
   VERSION: 3.2
 
@@ -66,8 +66,10 @@ jobs:
             ls expresso-rest/target >&2 || true
             exit 1
           fi
-          echo "cli_jar_name=$(basename "$CLI_JAR")" >> "$GITHUB_OUTPUT"
           echo "rest_jar_name=$(basename "$REST_JAR")" >> "$GITHUB_OUTPUT"
+          RELEASE_CLI="${APP_NAME}-cli-${VERSION}.jar"
+          cp "$CLI_JAR" "expresso-cli/target/${RELEASE_CLI}"
+          echo "cli_jar_name=${RELEASE_CLI}" >> "$GITHUB_OUTPUT"
 
       - name: Upload Cli Jar
         uses: actions/upload-artifact@v4
@@ -236,7 +238,8 @@ jobs:
           rm -f /usr/local/bin/${APP_NAME}
           exit 0
           EOF
-          chmod 755 packaging/postinst packaging/postrmy
+          chmod 755 packaging/postinst packaging/postrm
+
       - name: jpackage -> .deb (CLI only)
         shell: bash
         run: |
@@ -249,7 +252,7 @@ jobs:
             --input target \
             --main-jar "${{ needs.build-jar.outputs.cli_jar_name }}" \
             --main-class "${MAIN_CLASS}" \
-            --app-version "${VERSION}" \
+            --app-version 1.1 \
             --linux-deb-maintainer "Expresso Team <antony-08@hotmail.com>" \
             --resource-dir packaging \
             --dest dist \
@@ -292,53 +295,41 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
-
       - name: Set up Temurin JDK 24
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: '24'
-
       - name: Install WiX
         shell: powershell
         run: choco install wixtoolset -y
-
       - name: Download JARs
         uses: actions/download-artifact@v4
         with:
           name: "${{ env.APP_NAME }}-${{ env.VERSION }}.jar"
           path: target
-
-      - name: jpackage -> app-image (CLI-only)
+      - name: jpackage -> MSI
         shell: powershell
         run: |
-          New-Item -ItemType Directory -Force -Path out | Out-Null
+          New-Item -ItemType Directory -Force -Path dist | Out-Null
           jpackage `
-            --type app-image `
+            --type msi `
             --name "$env:APP_NAME" `
             --input target `
             --main-jar "${{ needs.build-jar.outputs.cli_jar_name }}" `
             --main-class "$env:MAIN_CLASS" `
+            --dest dist `
+            --app-version "$env:VERSION" `
+            --vendor "Expresso Team" `
             --win-console `
-            --dest out
-
-      - name: WiX harvest
-        shell: powershell
-        run: |
-              $src = Join-Path $PWD "out\$env:APP_NAME"
-              & "$env:WIX\bin\heat.exe" dir $src -cg AppFiles -dr INSTALLFOLDER -srd -var var.SourceDir -ag -out harvest.wxs
-
-      - name: Build MSI (WiX)
-        shell: powershell
-        run: |
-          & "$env:WIX\bin\candle.exe" -arch x64 -dSourceDir="$(Join-Path $PWD "out\$env:APP_NAME")" -out obj\ packaging/windows/product.wxs harvest.wxs
-          New-Item -ItemType Directory -Force -Path dist | Out-Null
-          & "$env:WIX\bin\light.exe" -ext WixUtilExtension -sval -o "dist\expressor-1.1.msi" obj\product.wixobj obj\harvest.wixobj
-
+            --win-menu `
+            --win-menu-group "Expresso" `
+            --icon "$env:GITHUB_WORKSPACE\assets\icon.png" `
+            --win-dir-chooser
       - name: Upload .msi
         uses: actions/upload-artifact@v4
         with:
-          name: windows-msi
+          name: ${{env.APP_NAME}}-${{env.VERSION}}.msi
           path: dist/*.msi
           if-no-files-found: error
 
@@ -358,7 +349,11 @@ jobs:
           if(-not $msi){ throw "MSI not found" }
           Write-Host "Installing $($msi.FullName)"
           Start-Process -FilePath msiexec.exe -ArgumentList '/i', $msi.FullName, '/qn', '/norestart' -Wait -NoNewWindow
-          Start-Process -FilePath cmd.exe -ArgumentList '/c', '${env:APP_NAME} --version' -Wait -NoNewWindow
+          $cliPath = "C:\Program Files\${env:APP_NAME}\${env:APP_NAME}.exe"
+          if(-not (Test-Path $cliPath)){
+            throw "CLI executable not found at $cliPath"
+          }
+          & $cliPath --version
           Start-Process -FilePath msiexec.exe -ArgumentList '/x', $msi.FullName, '/qn', '/norestart' -Wait -NoNewWindow
 
   cli-portable-exe:
@@ -412,17 +407,11 @@ jobs:
         with:
           name: ${{ env.APP_NAME }}-${{ env.VERSION }}.exe
           path: artifacts
-      - name: Verify portable EXE
+      - name: Run portable EXE (no install)
         shell: powershell
         run: |
           $exe = Get-ChildItem -Path artifacts -Filter *.exe | Select-Object -First 1
-          if(-not $exe){ throw "Portable EXE not found" }
-          Push-Location $exe.DirectoryName
-          try {
-            Start-Process -FilePath cmd.exe -ArgumentList '/c', '${env:APP_NAME} --version' -Wait -NoNewWindow
-          } finally {
-            Pop-Location
-          }
+          & $exe.FullName --help
 
   Create-cli-Release:
     runs-on: ubuntu-latest
@@ -469,16 +458,6 @@ jobs:
           name: ${{ env.APP_NAME }}-${{ env.VERSION }}.exe
           path: artifacts/exe
 
-      - name: Normalize artifact names
-        shell: bash
-        run: |
-          set -euo pipefail
-          mkdir -p release
-          cp artifacts/cli/*.jar "release/${APP_NAME}-${VERSION}.jar"
-          cp artifacts/deb/*.deb "release/${APP_NAME}-${VERSION}.deb"
-          cp artifacts/msi/*.msi "release/${APP_NAME}-${VERSION}.msi"
-          cp artifacts/exe/*.exe "release/${APP_NAME}-${VERSION}.exe"
-
       - name: Stage REST JAR for release image
         shell: bash
         run: |
@@ -494,6 +473,7 @@ jobs:
       - name: Build REST Docker image (release copy)
         run: docker build -f dockerfile -t ${{ env.APP_NAME }}-rest:${{ env.VERSION }} .
 
+      # --- NEW: Push image to Docker Hub when creds are present ---
       - name: Docker Hub login
         if: needs.build-jar.outputs.dockerhub_available == 'true'
         uses: docker/login-action@v3
@@ -517,6 +497,7 @@ jobs:
           docker push "$REPO:${VERSION}"
           docker push "$REPO:latest"
           docker push "$REPO:${SHORT_SHA}"
+      # --- END NEW ---
 
       - name: Create GitHub Release + upload assets
         id: gh_release
@@ -527,10 +508,10 @@ jobs:
           name: "${{ env.APP_NAME }} v${{ env.VERSION }}"
           generate_release_notes: true
           files: |
-            release/*.jar
-            release/*.deb
-            release/*.msi
-            release/*.exe
+            artifacts/cli/*.jar
+            artifacts/deb/*.deb
+            artifacts/msi/*.msi
+            artifacts/exe/*.exe
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
 
