--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -14,6 +14,8 @@ env:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+    outputs:
+      dockerhub_available: ${{ steps.check_docker.outputs.available }}
     steps:
       - uses: actions/checkout@v4
 
@@ -51,7 +53,7 @@ jobs:
           [ -z "$REST_JAR" ] && REST_JAR=$(find expresso-rest/target -maxdepth 1 -type f -name '*.jar' | sort | head -n1)
           [ -z "$REST_JAR" ] && { echo "No REST jar found under expresso-rest/target" >&2; exit 1; }
 
-          RELEASE_CLI="${APP_NAME}-${VERSION}.jar"
+          RELEASE_CLI="${APP_NAME}-${VERSION}-cli.jar"
           RELEASE_REST="${APP_NAME}-${VERSION}-rest.jar"
           cp "$CLI_JAR" "expresso-cli/target/${RELEASE_CLI}"
           cp "$REST_JAR" "expresso-rest/target/${RELEASE_REST}"
@@ -255,7 +257,7 @@ jobs:
             --resource-dir packaging \
             --dest dist \
             --verbose
-          mv dist/*.deb "dist/${APP_NAME}-cli-${VERSION}.deb"
+          mv dist/*.deb "dist/${APP_NAME}-${VERSION}.deb"
 
       - name: Upload Debian package
         uses: actions/upload-artifact@v4
@@ -324,116 +326,134 @@ jobs:
           docker push "$REPO:latest"
 
   release:
+    runs-on: ubuntu-latest
     needs:
+      - build-and-test
       - windows_packages
       - deb_package
       - docker_image
-    runs-on: ubuntu-latest
     steps:
-      - name: Download CLI jar artifact
+      - uses: actions/checkout@v4
+
+      - name: Download built CLI jar
         uses: actions/download-artifact@v4
         with:
           name: "${{ env.APP_NAME }}-${{ env.VERSION }}-cli.jar"
-          path: release
+          path: artifacts/cli
 
-      - name: Download REST jar artifact
+      - name: Download REST jar
         uses: actions/download-artifact@v4
         with:
           name: "${{ env.APP_NAME }}-${{ env.VERSION }}-rest.jar"
-          path: release
+          path: artifacts/rest
 
-      - name: Download Windows MSI artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: "${{ env.APP_NAME }}-${{ env.VERSION }}.msi"
-          path: release
-
-      - name: Download Windows EXE artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: "${{ env.APP_NAME }}-${{ env.VERSION }}.exe"
-          path: release
-
-      - name: Download Debian package artifact
+      - name: Download Debian package
         uses: actions/download-artifact@v4
         with:
           name: "${{ env.APP_NAME }}-${{ env.VERSION }}.deb"
-          path: release
+          path: artifacts/deb
 
-      - name: Inspect release inputs
+      - name: Download Windows MSI
+        uses: actions/download-artifact@v4
+        with:
+          name: "${{ env.APP_NAME }}-${{ env.VERSION }}.msi"
+          path: artifacts/msi
+
+      - name: Download Windows EXE
+        uses: actions/download-artifact@v4
+        with:
+          name: "${{ env.APP_NAME }}-${{ env.VERSION }}.exe"
+          path: artifacts/exe
+
+      - name: Stage REST jar for Docker image
+        shell: bash
         run: |
           set -euo pipefail
-          echo "Preparing GitHub release for version ${{ env.VERSION }}"
-          echo "Listing contents of release directory:"
-          ls -al release
-          echo "Files grouped by type:"
-          echo "- CLI jar:"
-          ls -al release | grep -E "\-cli\.jar$" || echo "CLI jar not found"
-          echo "- REST jar:"
-          ls -al release | grep -E "\-rest\.jar$" || echo "REST jar not found"
-          echo "- Windows packages:"
-          ls -al release | grep -E '\.(msi|exe)$' || echo "Windows packages not found"
-          echo "- Debian packages:"
-          ls -al release | grep -E '\.deb$' || echo "Debian package not found"
+          REST_JAR=$(find artifacts/rest -maxdepth 1 -name '*.jar' -print -quit)
+          if [ -z "$REST_JAR" ]; then
+            echo "REST jar not found in artifacts/rest" >&2
+            exit 1
+          fi
+          mkdir -p expresso-rest/target
+          cp "$REST_JAR" expresso-rest/target/
+
+      - name: Build REST Docker image (release copy)
+        run: docker build -f dockerfile -t ${{ env.APP_NAME }}-rest:${{ env.VERSION }} .
+
+      - name: Docker Hub login
+        if: needs.build-and-test.outputs.dockerhub_available == 'true'
+        uses: docker/login-action@v3
+        with:
+          username: ${{ env.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Push REST image to Docker Hub
+        if: needs.build-and-test.outputs.dockerhub_available == 'true'
+        shell: bash
+        run: |
+          set -euo pipefail
+          LOCAL="${APP_NAME}-rest:${VERSION}"
+          REPO="${{ env.DOCKERHUB_USERNAME }}/${APP_NAME}"
+          SHORT_SHA="${GITHUB_SHA::7}"
+          docker tag "$LOCAL" "$REPO:${VERSION}"
+          docker tag "$LOCAL" "$REPO:latest"
+          docker tag "$LOCAL" "$REPO:${SHORT_SHA}"
+          docker push "$REPO:${VERSION}"
+          docker push "$REPO:latest"
+          docker push "$REPO:${SHORT_SHA}"
 
       - name: Create GitHub release
-        id: create_release
-        uses: actions/create-release@v1
+        id: gh_release
+        uses: softprops/action-gh-release@v2
         with:
           tag_name: "v${{ env.VERSION }}"
-          release_name: "Expresso v${{ env.VERSION }}"
-          body: "Automated release generated after successful packaging and Docker deployment."
-          draft: false
-          prerelease: false
+          target_commitish: ${{ github.sha }}
+          name: "${{ env.APP_NAME }} v${{ env.VERSION }}"
+          generate_release_notes: true
+          files: |
+            artifacts/cli/*.jar
+            artifacts/rest/*.jar
+            artifacts/deb/*.deb
+            artifacts/msi/*.msi
+            artifacts/exe/*.exe
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Upload CLI jar asset
-        uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: "release/${{ env.APP_NAME }}-${{ env.VERSION }}-cli.jar"
-          asset_name: "${{ env.APP_NAME }}-${{ env.VERSION }}-cli.jar"
-          asset_content_type: application/java-archive
+      - name: Discord notify (success)
+        if: ${{ success() }}
+        uses: Ilshidur/action-discord@0.3.2
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        with:
+          args: |
+            ✅ **Release created**
+            • App: **${{ env.APP_NAME }}** v${{ env.VERSION }}
+            • Tag: `${{ github.ref_name }}`
+            • Author: ${{ github.actor }}
+            • Commit: `${{ github.sha }}`
+            • Release: ${{ steps.gh_release.outputs.html_url }}
+            • Run: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
 
-      - name: Upload REST jar asset
-        uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: "release/${{ env.APP_NAME }}-${{ env.VERSION }}-rest.jar"
-          asset_name: "${{ env.APP_NAME }}-${{ env.VERSION }}-rest.jar"
-          asset_content_type: application/java-archive
+      - name: Discord notify (failure)
+        if: ${{ failure() }}
+        uses: Ilshidur/action-discord@0.3.2
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        with:
+          args: |
+            ❌ **Release failed**
+            • App: **${{ env.APP_NAME }}** v${{ env.VERSION }}
+            • Ref: `${{ github.ref_name }}`
+            • Author: ${{ github.actor }}
+            • Run: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
 
-      - name: Upload Windows MSI asset
-        uses: actions/upload-release-asset@v1
+      - name: Delete uploaded artifacts
+        if: ${{ success() }}
+        uses: geekyeggo/delete-artifact@v4
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: "release/${{ env.APP_NAME }}-${{ env.VERSION }}.msi"
-          asset_name: "${{ env.APP_NAME }}-${{ env.VERSION }}.msi"
-          asset_content_type: application/octet-stream
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Upload Windows EXE asset
-        uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: "release/${{ env.APP_NAME }}-${{ env.VERSION }}.exe"
-          asset_name: "${{ env.APP_NAME }}-${{ env.VERSION }}.exe"
-          asset_content_type: application/octet-stream
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Upload Debian package asset
-        uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: "release/${{ env.APP_NAME }}-cli-${{ env.VERSION }}.deb"
-          asset_name: "${{ env.APP_NAME }}-cli-${{ env.VERSION }}.deb"
-          asset_content_type: application/vnd.debian.binary-package
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          name: |
+            ${{ env.APP_NAME }}-${{ env.VERSION }}-cli.jar
+            ${{ env.APP_NAME }}-${{ env.VERSION }}-rest.jar
+            ${{ env.APP_NAME }}-${{ env.VERSION }}.deb
+            ${{ env.APP_NAME }}-${{ env.VERSION }}.msi
+            ${{ env.APP_NAME }}-${{ env.VERSION }}.exe
