--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -2,7 +2,7 @@ name: CI Pipeline
 
 on:
   push:
-    branches: [main]
+    branches: [dev]
 
 permissions:
   contents: write
@@ -113,8 +113,8 @@ jobs:
           path: "${{ steps.prepare.outputs.rest_path }}"
           if-no-files-found: error
 
-  windows_packages:
-    needs: [build-and-test]
+  package-msi:
+    needs: build-and-test
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
@@ -129,59 +129,45 @@ jobs:
         shell: powershell
         run: choco install wixtoolset -y
 
-      - name: Download CLI jar
+      - name: Download JARs
         uses: actions/download-artifact@v4
         with:
-          name: "${{ env.APP_NAME }}-${{ env.VERSION }}-cli.jar"
+          name: ${{ env.APP_NAME }}-${{ env.VERSION }}-cli.jar
           path: target
 
-      - name: Build MSI installer
+      - name: jpackage -> app-image (CLI-only)
         shell: powershell
         run: |
+          New-Item -ItemType Directory -Force -Path out | Out-Null
+          jpackage `
+            --type app-image `
+            --name "$env:APP_NAME" `
+            --input target `
+            --main-jar "${{ env.APP_NAME }}-${{ env.VERSION }}-cli.jar" `
+            --main-class "$env:MAIN_CLASS" `
+            --win-console `
+            --dest out
+
+      - name: WiX harvest
+        shell: powershell
+        run: |
+              $src = Join-Path $PWD "out\$env:APP_NAME"
+              & "$env:WIX\bin\heat.exe" dir $src -cg AppFiles -dr INSTALLFOLDER -srd -var var.SourceDir -ag -out harvest.wxs
+
+      - name: Build MSI (WiX)
+        shell: powershell
+        run: |
+          & "$env:WIX\bin\candle.exe" -arch x64 -dSourceDir="$(Join-Path $PWD "out\$env:APP_NAME")" -out obj\ packaging/windows/product.wxs harvest.wxs
           New-Item -ItemType Directory -Force -Path dist | Out-Null
-          jpackage `
-            --type msi `
-            --name "$env:APP_NAME" `
-            --input target `
-            --main-jar "${{ env.APP_NAME }}-${{ env.VERSION }}-cli.jar" `
-            --main-class "$env:MAIN_CLI_CLASS" `
-            --dest dist `
-            --app-version "$env:VERSION" `
-            --vendor "Expresso Team" `
-            --win-console `
-            --win-menu `
-            --win-menu-group "Expresso" `
-            --win-dir-chooser
+          & "$env:WIX\bin\light.exe" -ext WixUtilExtension -sval -o "dist\expressor-1.1.msi" obj\product.wixobj obj\harvest.wixobj
 
-      - name: Upload MSI
+
+
+      - name: Upload .msi
         uses: actions/upload-artifact@v4
         with:
-          name: "${{ env.APP_NAME }}-${{ env.VERSION }}.msi"
+          name: windows-msi
           path: dist/*.msi
-          if-no-files-found: error
-
-      - name: Build portable EXE
-        shell: powershell
-        run: |
-          jpackage `
-            --type exe `
-            --name "$env:APP_NAME" `
-            --input target `
-            --main-jar "${{ env.APP_NAME }}-${{ env.VERSION }}-cli.jar" `
-            --main-class "$env:MAIN_CLI_CLASS" `
-            --dest dist `
-            --app-version "$env:VERSION" `
-            --vendor "Expresso Team" `
-            --win-console `
-            --win-menu `
-            --win-menu-group "Expresso" `
-            --win-dir-chooser
-
-      - name: Upload EXE
-        uses: actions/upload-artifact@v4
-        with:
-          name: "${{ env.APP_NAME }}-${{ env.VERSION }}.exe"
-          path: dist/*.exe
           if-no-files-found: error
 
   deb_package:
@@ -284,7 +270,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - build-and-test
-      - windows_packages
+      - package-msi
       - deb_package
       - docker_image
     steps:
