--- a/.gitignore
+++ b/.gitignore
@@ -19,9 +19,4 @@ expresso-cli/target/*
 !pom.xml
 !README.md
 !.gitignore
-
-
-expresso-cli/target/expresso-cli-0.1.0.jar
-expresso-cli/target/expresso-cli-0.1.0.jar
-expresso-cli/target/original-expresso-cli-0.1.0.jar
-.github/workflows/a.yaml
+!/packaging
