--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -166,7 +166,7 @@ jobs:
       - name: Upload .msi
         uses: actions/upload-artifact@v4
         with:
-          name: windows-msi
+          name: ${{ env.APP_NAME }}-${{ env.VERSION }}.msi
           path: dist/*.msi
           if-no-files-found: error
 
