--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -303,6 +303,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs:
+      - package-exe
       - build-and-test
       - package-msi
       - deb_package
