--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -129,6 +129,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: ${{ env.APP_NAME }}-${{ env.VERSION }}-cli.jar
+          path: target
 
       - name: jpackage -> .exe (CLI-only)
         shell: powershell
@@ -204,7 +205,7 @@ jobs:
           path: dist/*.msi
           if-no-files-found: error
 
-  deb_package:
+  package_deb:
     needs: [build-and-test]
     runs-on: ubuntu-latest
     steps:
@@ -306,7 +307,7 @@ jobs:
       - package-exe
       - build-and-test
       - package-msi
-      - deb_package
+      - package_deb
       - docker_image
     steps:
       - uses: actions/checkout@v4
